--- a/css/slidefolio.css
+++ b/css/slidefolio.css
@@ -36,7 +36,7 @@ body{
   text-align: center;
 }
 
-.btn{
+.link-button{
   display: inline-block;
   width: 90px;
   height: 90px;
@@ -48,16 +48,16 @@ body{
   overflow: hidden;
   position: relative;
 }
-.btn i{
+.link-button i{
   line-height: 90px;
   font-size: 26px;
   transition: 0.2s linear;
 }
-.btn:hover i{
+.link-button:hover i{
   transform: scale(1.3);
   color: #f1f1f1;
 }
-.btn::before{
+.link-button::before{
   content: "";
   position: absolute;
   width: 120%;
@@ -67,7 +67,7 @@ body{
   left: -110%;
   top: 90%;
 }
-.btn:hover::before{
+.link-button:hover::before{
   animation: aaa 0.7s 1;
   top: -10%;
   left: -10%;
@@ -221,15 +221,15 @@ border-radius:0px !important;
   width: 100%;
   position: relative;
 }
-.btn-top {
+.link-button-top {
 color:#f1f1f1;
 background:none repeat scroll 0 0 rgba(0, 0, 0, 0.57);
 border-color:#cccccc;
 }
-.btn-top:hover,
-.btn-top:focus,
-.btn-top:active,
-.btn-top.active {
+.link-button-top:hover,
+.link-button-top:focus,
+.link-button-top:active,
+.link-button-top.active {
   color: #333333;
   background-color: #ebebeb;
   border-color: #adadad;
