--- a/css/slidefolio.css
+++ b/css/slidefolio.css
@@ -24,9 +24,7 @@ cursor:pointer;
 	width: 32px; 
 	z-index: 0;
 }
-body{
-  padding: 0;
-  margin: 0;
+
 }
 .list-inline{
   position: absolute;
@@ -35,12 +33,11 @@ body{
   width: 100%;
   text-align: center;
 }
-
-.btn{
+.link_btn{
   display: inline-block;
   width: 90px;
   height: 90px;
-  background: #f1f1f1;
+  background: #ffffff;
   margin: 10px;
   border-radius: 30%;
   box-shadow: 0 5px 15px -5px #00000070;
@@ -48,16 +45,17 @@ body{
   overflow: hidden;
   position: relative;
 }
-.btn i{
+
+.link_btn i{
   line-height: 90px;
   font-size: 26px;
   transition: 0.2s linear;
 }
-.btn:hover i{
+.link_btn:hover i{
   transform: scale(1.3);
   color: #f1f1f1;
 }
-.btn::before{
+.link_btn::before{
   content: "";
   position: absolute;
   width: 120%;
@@ -65,9 +63,10 @@ body{
   background: #3498db;
   transform: rotate(45deg);
   left: -110%;
-  top: 90%;
+  top: 100%;
 }
-.btn:hover::before{
+
+.link_btn:hover::before{
   animation: aaa 0.7s 1;
   top: -10%;
   left: -10%;
@@ -84,6 +83,7 @@ body{
     left: -10%;
   }
 }
+
 
 .vegas-overlay {
 	background: transparent url(overlays/01.png);
