--- a/css/slidefolio.css
+++ b/css/slidefolio.css
@@ -64,13 +64,13 @@ ul li:nth-child(2):before{
   background: #1DA1F2;
 }
 ul li:nth-child(3):before{
-  background: #E1306C;
+  background: rgb(219, 87, 131);
 }
 ul li:nth-child(4):before{
   background: rgb(184, 184, 184);
 }
 ul li:nth-child(5):before{
-  background: #ff0000;
+  background: #f85151;
 }
 ul li:hover:before{
   filter: blur(3px);
@@ -90,34 +90,8 @@ ul li:nth-child(4):hover:before{
   box-shadow: 0 0 15px rgb(151, 151, 151);
 }
 ul li:nth-child(5):hover:before{
-  box-shadow: 0 0 15px #ff0000;
+  box-shadow: 0 0 15px #f07272;
 }
-ul li:nth-child(1):hover{
-  color: #456cba;
-  box-shadow: 0 0 15px #4267B2;
-  text-shadow: 0 0 15px #4267B2;
-}
-ul li:nth-child(2):hover{
-  color: #26a4f2;
-  box-shadow: 0 0 15px #1DA1F2;
-  text-shadow: 0 0 15px #1DA1F2;
-}
-ul li:nth-child(3):hover{
-  color: #e23670;
-  box-shadow: 0 0 15px #E1306C;
-  text-shadow: 0 0 15px #E1306C;
-}
-ul li:nth-child(4):hover{
-  color: #2a6cbb;
-  box-shadow: 0 0 15px rgb(148, 149, 150);
-  text-shadow: 0 0 15px rgb(212, 212, 212);
-}
-ul li:nth-child(5):hover{
-  color: #ff1a1a;
-  box-shadow: 0 0 15px #ff0000;
-  text-shadow: 0 0 15px #ff0000;
-}
-
 
 
 
